# wirecraft

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: docker-build-and-publish.yml  godot-build.yaml  godot-build.yml  linting.yml
godot/: .gitignore  export_presets.cfg  project.godot
godot/assets/: PC-1.png.import  PT-Link-1.png.import  correct.mp3.import  icon.png.import  incorrect.swf.mp3.import  inventory-button.png.import  inventory.png.import  logo.png.import  simulation-button.png.import  task.png.import  tasks-button.png.import  wirecraft-logo.svg.import
godot/scenes/: Game.tscn  Game.tscn1948600544.tmp  Game.tscn2721478730.tmp  Game.tscn9678286573.tmp  Menu.tscn  Settings.tscn  cable.tscn  incorrect.swf.mp3.import  pc.tscn  switch.tscn  window.tscn
godot/scripts/: cable.gd  cable.gd.uid  cable_controller.gd  cable_controller.gd.uid  camera.gd  camera.gd.uid  device.gd  device.gd.uid  device_controller.gd  device_controller.gd.uid  global.gd  global.gd.uid  inventory.gd  inventory.gd.uid  line_edit.gd  line_edit.gd.uid  menu.gd  menu.gd.uid  option_button.gd  option_button.gd.uid  tasks.gd  tasks.gd.uid  ui.gd  ui.gd.uid  window.gd  window.gd.uid  ws.gd  ws.gd.uid
python/: Dockerfile  alembic.ini  compose.yaml  pyproject.toml  simulated-client.py  simulated_client.py  test_server.py  tmp_network.py
python/legacy/client/: constants.py  server_interface.py
python/legacy/client/ui/: assets.py  camera.py  extended_sprite.py
python/migrations/: script.py.mako
python/migrations/versions/: 7f85f5c3aab9_init.py
python/networking/: device.py  routing.py
python/networking/capabilities/: arp.py  base.py  ipv4.py  routing.py
python/src/wirecraft_server/: __main__.py  _logger.py  context.py  handlers_core.py  network.py  server.py  utils.py
python/src/wirecraft_server/database/: __init__.py  base.py  models.py  session.py  task.py
python/src/wirecraft_server/database/migrations/: README  env.py
python/src/wirecraft_server/database/migrations/versions/: 2025_07_08_0034-5575fe6df45d_init.py
python/src/wirecraft_server/handlers/: __init__.py  cables.py  devices.py  launch.py  tasks.py
python/src/wirecraft_server/networking/: __init__.py  bidirectional_map.py  device.py  mac_address.py  osi.py  requests.py  utils.py
python/src/wirecraft_server/networking/capabilities/: __init__.py  arp.py  base.py  ethernet.py  icmp.py  ipv4.py  layer2.py  layer3.py  routing.py
python/src/wirecraft_server/static/: __init__.py  base.py  levels.py  tests.py
python/tests/: test_network.py  test_networking.py  test_utils.py
python/tests/networking/: test_ping.py
python/typings/igraph/: __init__.pyi
src/: main.py
src/client/: __init__.py  __main__.py  assets.py  server_interface.py
src/server/: __init__.py
src/server/database/: models.py
src/wirecraft/: __main__.py  _logger.py  shared_context.py
src/wirecraft/client/: __init__.py  __main__.py  assets.py  constants.py  game.py  server_interface.py  utils.py
src/wirecraft/client/devices/: base.py
src/wirecraft/client/ui/: __init__.py  assets.py  assets_meta.py  button.py  cable.py  camera.py  device.py  extended_sprite.py  window.py
src/wirecraft/server/: __init__.py  database.py  server.py
src/wirecraft/server/database/: models.py
typings/igraph/: __init__.pyi
